--- a/index.html
+++ b/index.html
@@ -5,10 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mulheres que Inspiram</title>
 </head> 
+<body> <body style="background-color:rgb(189, 203, 247);"></body> 
 <link href="css/style.css" rel="stylesheet">
 <style>.img-container { text-align: center; display: block;}
 </style>
 <body>
+      <style>
+        img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }  
     <img src="./Assets/Images/download.jpeg">
     <h1>Fei-Fei Li</h1>
     <h2>Biografia</h2>
